إضافة قسم عطور مشابهة أسفل صفحة المنتج (مهمة 2.2)
